--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="page-content">
   <h3>Drag and drop</h3>
   <p>You can change priority by dnd the item</p>
-  <app-list></app-list>
+  <app-list [items]='progects'></app-list>
 </div>
