--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let item of items$">
+<div *ngFor="let item of items | async">
   <app-list-item [item]="item"></app-list-item>
 </div>
