--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,3 +1,6 @@
-<div *ngFor="let item of items | async">
-  <app-list-item [item]="item"></app-list-item>
+<div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+  <div cdkDrag class="list-item" *ngFor="let item of items | async">
+    <app-list-item [item]="item"></app-list-item>
+  </div>
 </div>
+  
